<resources>
    <string name="app_name">Crew Caller</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="titleCrewCallerActivity">CrewCallerActivity</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="invalidEmailAddressHelper">Invalid Email Address</string>
    <string name="optionalFieldHelper">Optional</string>
    <string name="locationRequiredError">Location Permissions Are Required For Weather Forecast</string>
    <string name="enableYourLocation">Enable Location To Fetch Weather Coordinates</string>
    <string name="resetEmailSentToast">Reset Email Has Been Sent!</string>
    <string name="firebaseLoginFailureToast">You have entered an incorrect account</string>
    <string name="authenticationFailed">Authentication Failed!</string>
    <string name="emailAddressNotValidToast">Email Address is Not Valid</string>
    <string name="enterEmailAddressToast">Please Enter Your Email Address</string>
    <string name="pleaseEnterPasswordToast">Please Enter a Password</string>
    <string name="editContactTitle">Edit Contact</string>
    <string name="contact">Contacts</string>
    <string name="calendar">Calendar</string>
    <string name="firstNameRequiredToast">A First Name is Required</string>
    <string name="contactSavedToast">Contact Saved</string>
    <string name="contactDeletedToast">Contact Deleted</string>
    <string name="upcomingWork">Upcoming Work</string>
    <string name="editRate">Edit Rate</string>
    <string name="payRates">Pay Rates</string>
    <string name="selectTierToast">Please Select a Tier</string>
    <string name="enterYourPositionToast">Please Enter Your Position</string>
    <string name="enterYourRateToast">Please Enter Your Rate</string>
    <string name="payRateSavedToast">Pay Rate Saved</string>
    <string name="payRateDeletedToast">Pay Rate Deleted</string>
    <string name="preferences">Preferences</string>
    <string name="databaseRetrievedToast">Database Retrieved</string>
    <string name="noBackupsFoundToast">No Backups Found</string>
    <string name="unableToConnectToNetworkToast">Unable to connect, check your network connection</string>
    <string name="unableToConnectFirebaseAccountToast">Unable to Connect to Your Account</string>
    <string name="backupDatabaseItemNullToast">The BackUpDatabase Item Received Is Null</string>
    <string name="editProduction">Edit Production</string>
    <string name="productions">Productions</string>
    <string name="productionSaved">Production Saved</string>
    <string name="properProductionNameRequiredToast">A Proper Production Name is Required</string>
    <string name="productionDeletedToast">Production Deleted</string>
    <string name="editWorkDay">Edit Work Day</string>
    <string name="scheduledWork">Scheduled Work</string>
    <string name="workDayDeletedToast">Work Day Deleted</string>
    <string name="noDateAvailible">No Date Available</string>
    <string name="zeroEarnings">$0.00</string>
    <string name="zeroTime">00:00:00</string>
    <string name="lastBackUp">Last Backup: %1$s</string>
    <string name="drawer_menu">Drawer Menu</string>
    <string name="crew">crew</string>
    <string name="caller">caller</string>
    <string name="background_image">Background Image</string>
    <string name="previous_month_button">previous month button</string>
    <string name="next_month_button">next month button</string>
    <string name="sun">SUN</string>
    <string name="mon">MON</string>
    <string name="tue">TUE</string>
    <string name="wed">WED</string>
    <string name="thur">THUR</string>
    <string name="fri">FRI</string>
    <string name="sat">SAT</string>
    <string name="back_button">back button</string>
    <string name="contacts">Contacts</string>
    <string name="header_image">header image</string>
    <string name="no_contacts">No Contacts</string>
    <string name="add_production_button">Add Production Button</string>
    <string name="edit_button">edit button</string>
    <string name="phone_image">phone image</string>
    <string name="call_now">Call Now</string>
    <string name="email_image">email image</string>
    <string name="send_email">Send Email</string>
    <string name="facebook_image">facebook image</string>
    <string name="facebook">Facebook</string>
    <string name="instagram_image">instagram image</string>
    <string name="instagram">Instagram</string>
    <string name="total_earnings">Total Earnings</string>
    <string name="days_worked">Days Worked</string>
    <string name="contact_image">contact image</string>
    <string name="address_image">address image</string>
    <string name="address">Address</string>
    <string name="pay_rate">Pay Rate</string>
    <string name="time_worked">Time Worked</string>
    <string name="start_time_image">start time image</string>
    <string name="start_time">Start Time</string>
    <string name="stop_time_image">stop time image</string>
    <string name="wrap_time">Wrap Time</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="enter_your_email_address_to_reset_you_passoword">Enter your email address to reset you passoword.</string>
    <string name="type_your_email">Type your Email</string>
    <string name="submit">Submit</string>
    <string name="unable_to_get_weather_data">Unable To Get Weather Data</string>
    <string name="weather_image">weather image</string>
    <string name="weather_high_image">weather high image</string>
    <string name="weather_low_image">weather low image</string>
    <string name="no_work_scheduled">No Work Scheduled</string>
    <string name="login">Login</string>
    <string name="please_sign_in_to_continue">Please sign in to continue</string>
    <string name="type_your_password">Type Your Password</string>
    <string name="sign_in">Sign In</string>
    <string name="not_registered_yet_sign_up">Not Registered Yet , Sign Up !</string>
    <string name="no_pay_rates">No Pay Rates</string>
    <string name="add_pay_rate_button">Add Pay Rate Button</string>
    <string name="account_recovery">Account Recovery</string>
    <string name="backup">BackUp</string>
    <string name="restore">Restore</string>
    <string name="complete_animation_image">complete animation image</string>
    <string name="no_productions">No Productions</string>
    <string name="create_new_contact">Create New Contact</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="position">Position</string>
    <string name="production">Production</string>
    <string name="email">Email</string>
    <string name="enable_editing">Enable Editing</string>
    <string name="delete_button">delete button</string>
    <string name="create_new_pay_rate">Create New Pay Rate</string>
    <string name="tier">Tier</string>
    <string name="rate">Rate</string>
    <string name="create_new_production">Create New Production</string>
    <string name="name">Name</string>
    <string name="create_work_day">Create Work Day</string>
    <string name="date">Date</string>
    <string name="end_time">End Time</string>
    <string name="add_work_day_button">Add Work Day Button</string>
    <string name="add_work_button">Add Work Button</string>
    <string name="sign_up">Sign Up</string>
    <string name="enter_your_details_to_register">Enter your details to register</string>
    <string name="type_your_name">Type your Name</string>
    <string name="profile_image">profile image</string>
    <string name="home">Home</string>
    <string name="scheduled_work">Scheduled Work</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>

</resources>