<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="ca.veltus.crewcaller.main.calendar.CalendarViewModel" />

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="20dp"
        tools:context=".main.calendar.CalendarFragment">

        <ImageButton
            android:id="@+id/previousCalendarButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/fui_transparent"
            android:contentDescription="@string/previous_month_button"
            android:src="@drawable/ic_baseline_arrow_back_ios_24"
            app:layout_constraintEnd_toStartOf="@+id/monthYearTextView"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/monthYearTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@{viewModel.monthYearTextFromDate}"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@+id/nextCalendarButton"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintStart_toEndOf="@+id/previousCalendarButton"
            app:layout_constraintTop_toTopOf="parent"
            tools:text="August 2022" />

        <ImageButton
            android:id="@+id/nextCalendarButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/fui_transparent"
            android:contentDescription="@string/next_month_button"
            android:src="@drawable/ic_baseline_arrow_forward_ios_24"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_weight="1"
            app:layout_constraintStart_toEndOf="@+id/monthYearTextView"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/dayOfWeekLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/previousCalendarButton">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sun"
                android:textAlignment="center"
                android:textColor="@color/calendarGrey"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mon"
                android:textAlignment="center"
                android:textColor="@color/calendarGrey"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tue"
                android:textAlignment="center"
                android:textColor="@color/calendarGrey"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/wed"
                android:textAlignment="center"
                android:textColor="@color/calendarGrey"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/thur"
                android:textAlignment="center"
                android:textColor="@color/calendarGrey"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/fri"
                android:textAlignment="center"
                android:textColor="@color/calendarGrey"
                android:textSize="16sp" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/sat"
                android:textAlignment="center"
                android:textColor="@color/calendarGrey"
                android:textSize="16sp" />

        </LinearLayout>

        <ca.veltus.crewcaller.main.calendar.CalendarRecyclerView
            android:id="@+id/calendarRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:liveData="@{viewModel.calendarList}"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/dayOfWeekLayout" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>