<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.motion.widget.MotionLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layoutDescription="@xml/activity_splash_screen_xml_mainlayout_scene"
        tools:context=".authentication.splash.SplashScreenActivity">

        <TextView
            android:id="@+id/logoCrewText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="9dp"
            android:elevation="1dp"
            android:fontFamily="@font/gelion_semibold"
            android:text="@string/crew"
            android:textColor="@color/white"
            android:textSize="@dimen/splashScreenLogoTextSize"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@id/logoCallerText"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/logoCallerText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:elevation="1dp"
            android:fontFamily="@font/gelion_semibold"
            android:text="@string/caller"
            android:textColor="@color/white"
            android:textSize="@dimen/splashScreenLogoTextSize"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/logoCrewText"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/splashScreenBackground"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:contentDescription="@string/background_image"
            android:src="@drawable/gradient_splash_screen_background"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.motion.widget.MotionLayout>
</layout>