<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="ca.veltus.crewcaller.authentication.LoginViewModel" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        tools:context=".authentication.login.LoginActivity">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/backButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:contentDescription="@string/back_button"
                android:onClick="@{() -> viewModel.navigateBack()}"
                android:src="@drawable/ic_baseline_arrow_back_24"
                app:layout_constraintBottom_toTopOf="@+id/forgotPasswordSubtitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.06"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.120000005"
                app:layout_constraintVertical_chainStyle="packed"
                app:tint="@color/optionalGrey" />

            <TextView
                android:id="@+id/forgotPasswordTitle"
                style="@style/loginTitle"
                android:text="@string/forgot_password"
                android:textSize="38sp"
                app:layout_constraintBottom_toTopOf="@+id/forgotPasswordSubtitle"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.44"
                app:layout_constraintVertical_chainStyle="packed" />

            <TextView
                android:id="@+id/forgotPasswordSubtitle"
                style="@style/loginSubtitle"
                android:layout_marginTop="18dp"
                android:gravity="center"
                android:paddingStart="24dp"
                android:paddingEnd="24dp"
                android:text="@string/enter_your_email_address_to_reset_you_passoword"
                app:layout_constraintBottom_toTopOf="@+id/emailEditTextLayout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/forgotPasswordTitle" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/emailEditTextLayout"
                style="@style/LoginTextInputOuterFieldStyle"
                emailHelperTextColorSwitcher="@{String.valueOf(viewModel.emailAddress)}"
                emailTextInputEditTextStatus="@{emailInputEditText}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="48dp"
                app:boxStrokeColor="@color/purpleLogoLight"
                app:helperTextEnabled="true"
                app:hintTextColor="@color/purpleLogoLight"
                app:layout_constraintBottom_toTopOf="@+id/submitButton"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/forgotPasswordSubtitle"
                app:startIconDrawable="@drawable/ic_baseline_email_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailInputEditText"
                    style="@style/LoginTextInputInnerFieldStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/type_your_email"
                    android:inputType="textEmailAddress"
                    android:text="@={viewModel.emailAddress}" />
            </com.google.android.material.textfield.TextInputLayout>

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/submitButton"
                android:layout_width="347dp"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="38dp"
                android:background="@drawable/rounded_corners_button"
                android:text="@string/submit"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailEditTextLayout" />


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</layout>